Fix message menu alignment fix also affecting right-click menus with checkboxes

--- a/extension/styles.css
+++ b/extension/styles.css
@@ -30,8 +30,11 @@
 .item-1Yvehc {
 	font-size: 0.9375rem !important; /* 15px (to match the server menu) if the user's font scale is 16px. */
 	text-align: left !important;
-	justify-content: left !important;
 	margin: 0px !important;
 	padding: 10px 14px !important;
 	width: 100% !important;
 }
+	/* Message menu item */
+	.item-2J1YMK {
+		justify-content: left !important;
+	}
